arreglo a vulnerabilidades